test/correct/OverloadedMain.hs
main = f 1

f :: Eq a => Int -> [a]
f _ = []

